--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
         "coveralls": "^3.0.0",
         "istanbul": "^0.4.5",
         "mocha": "^5.0.5"
+    },
+    "dependencies": {
+        "lodash.isequal": "^4.5.0"
     }
 }
